# gray-scott

./: .gitignore  CMakeLists.txt  README.md  adios2_config.xml  gray_scott.cpp  gray_scott.h  main.cpp  settings.cpp  settings.h  settings.json
